--- a/src/note-book/OperaSystems/更换系统和命令行语言.md
+++ b/src/note-book/OperaSystems/更换系统和命令行语言.md
@@ -1,3 +1,5 @@
+# 更换系统和命令行语言
+
 # 一.背景信息
 
 在安装完 kali linux 2020.1 时，其操作系统默认语言为英文的，我们操作起来比较麻烦，为了以后操作方便起见，这边将其操作系统默认语言更改为中文。本篇文章将带领各位小伙伴们一起去将操作系统默认语言更改为中文
