--- a/src/note-book/DatabaseSystem/MySQL/国内源.md
+++ b/src/note-book/DatabaseSystem/MySQL/国内源.md
@@ -1,3 +1,7 @@
+---
+category: 数据库
+#category: 网络安全
+---
 
 # 国内源
 ```bash
@@ -14,4 +18,4 @@ quit; //最后退出
 
 ```
 
-https://www.jianshu.com/p/b70a2cb5d4be
+> https://www.jianshu.com/p/b70a2cb5d4be
