增加友链内容，添加评论区，添加关于我页面

--- a/src/友链/友链.md
+++ b/src/友链/友链.md
@@ -1,3 +1,7 @@
+---
+sidebar: false
+---
+
 # 友链
 
 ## 官方文档
@@ -10,6 +14,13 @@ link: https://v2.vuepress.vuejs.org/zh/
 color: rgb(193 197 210)
 ```
 
+```card
+title: vuepress-theme-hope
+desc: 一个具有强大功能的 vuepress 主题✨
+logo: https://theme-hope.vuejs.press/logo.svg
+link: https://theme-hope.vuejs.press/zh/
+color: rgb(193 197 210)
+```
 
 ```card
 title: Markdown 增强
