--- a/src/友链/友链.md
+++ b/src/友链/友链.md
@@ -2,7 +2,27 @@
 sidebar: false
 ---
 
-# 友链
+# 友情链接
+
+### 一个模板
+
+```yaml
+title: 运维开发绿皮书
+desc: 放置我的笔记、搜集、摘录、实践，保持好奇心。看文需谨慎，后果很严重!
+logo: https://paper-dragon.github.io/logo.svg
+link: https://paper-dragon.github.io/
+color: rgb(163 217 171)
+```
+
+## 友链
+
+```card
+title: 〇°
+desc: 〇°的博客
+logo: https://lingdu.love/vuepress-lingdu-v2/img/logo.png
+link: https://lingdu.love
+color: rgb(163 217 171)
+```
 
 ## 官方文档
 
@@ -29,7 +49,6 @@ logo: https://plugin-md-enhance.vuejs.press/logo.svg
 link: https://plugin-md-enhance.vuejs.press/zh/
 color: rgb(193 197 210)
 ```
-
 
 ```card
 title: vuepress-plugin-comment2
