nVidia 开源驱动和闭源驱动冲突问题

--- a/src/友链/友链.md
+++ b/src/友链/友链.md
@@ -67,6 +67,16 @@ link: https://plugin-components.vuejs.press/zh/
 color: rgb(193 197 210)
 ```
 
+
+```card
+title: vuepress-theme-hope Font Matter
+desc:  Font Matter 配置直达
+logo: https://theme-hope.vuejs.press/logo.svg
+link: https://theme-hope.vuejs.press/zh/
+color: rgb(193 197 210)
+```
+
+
 ```card
 title: fontawesome
 desc: 开源图标库
