nVidia 开源驱动和闭源驱动冲突问题

--- a/src/note-book/AI-Training/英伟达开源驱动和闭源驱动冲突问题.md
+++ b/src/note-book/AI-Training/英伟达开源驱动和闭源驱动冲突问题.md
@@ -1,28 +1,20 @@
 ---
-category： 
-  - Nvidia
-tag: 
-  - Nvidia
-  - nouveau
+category： Nvidia
+tag: Nvidia
 ---
-
-
-
-
 
 # 英伟达开源驱动和闭源驱动冲突问题
 
 ## 起因
 
-今天朋友安装驱动遇到了一些问题，给了一张日志图片问我怎么办，我看着显示报错最后一行显示 PCI-E xxx.xxxx.xxx  nouveau。就是nvidia显卡驱动的问题八九不离十了。
+今天朋友安装驱动遇到了一些问题，给了一张日志图片问我怎么办，我看着显示报错最后一行显示 PCI-E xxx.xxxx.xxx
+nouveau。就是nvidia显卡驱动的问题八九不离十了。
 
 nvidia给了不同类型的驱动多种版本，开源驱动对Linux支持较差，在切换闭源官方驱动的时候经常出现各种问题。
 
 ![image-20231110113058910](英伟达开源驱动和闭源驱动冲突问题.assets/image-20231110113058910.png)
 
 下面是安装步骤的总结
-
-
 
 ## 正常安装步骤
 
@@ -50,6 +42,7 @@ vim /etc/modprobe.d/blacklist.conf
 
     blacklist nouveau
     options nouveau modeset=0
+
 ### 更新验证生效
 
 通过如下命令更新系统，使刚刚修改的文件生效：
@@ -78,8 +71,6 @@ chmod +x NVIDIA-Linux-x86_64-535.54.03.run
 reboot
 ```
 
-
-
 ## 报错处理
 
 ### 无法安装
@@ -90,15 +81,11 @@ reboot
 ./NVIDIAxxxx.run --no-x-check
 ```
 
-
-
-
-
 ### 无法开机
 
 #### 引导界面更改mode
 
-进入grub界面，将这个界面的最后部分的“quiet splash —”改为“nomodeset”。F10保存，就可以进入安装界面，进行安装。 
+进入grub界面，将这个界面的最后部分的“quiet splash —”改为“nomodeset”。F10保存，就可以进入安装界面，进行安装。
 
 #### 按照正常安装步骤进行安装
 
