升级基础组件, 跟进主版本  "vuepress-theme-hope": "2.0.0-beta.250"

--- a/src/友链/友链.md
+++ b/src/友链/友链.md
@@ -7,80 +7,85 @@ sidebar: false
 ### 一个模板
 
 ```yaml
-title: 运维开发绿皮书
-desc: 放置我的笔记、搜集、摘录、实践，保持好奇心。看文需谨慎，后果很严重!
-logo: https://paper-dragon.github.io/logo.svg
-link: https://paper-dragon.github.io/
-color: rgb(163 217 171)
+<VPCard
+  title="运维开发绿皮书"
+  desc="放置我的笔记、搜集、摘录、实践，保持好奇心。看文需谨慎，后果很严重!"
+  logo="https://paper-dragon.github.io/logo.svg"
+  link="https://paper-dragon.github.io/"
+  background="rgba(253, 230, 138, 0.15)"
+/>
+
 # 友链申请 https://paper-dragon.github.io/友链/友链.html
 ```
 
 ## 友链
 
-```card
-title: 〇°
-desc: 〇°的博客
-logo: https://lingdu.love/vuepress-lingdu-v2/img/logo.png
-link: https://lingdu.love
-color: rgb(163 217 171)
-```
+<VPCard
+  title="〇°"
+  desc="〇°的博客"
+  logo="https://lingdu.love/vuepress-lingdu-v2/img/logo.png"
+  link="https://lingdu.love"
+  background="rgba(253, 230, 138, 0.15)"
+/>
 
 ## 官方文档
 
-```card
-title: VuePress
-desc: Vue 驱动的静态网站生成器
-logo: https://v2.vuepress.vuejs.org/images/hero.png
-link: https://v2.vuepress.vuejs.org/zh/
-color: rgb(193 197 210)
-```
-
-```card
-title: vuepress-theme-hope
-desc: 一个具有强大功能的 vuepress 主题✨
-logo: https://theme-hope.vuejs.press/logo.svg
-link: https://theme-hope.vuejs.press/zh/
-color: rgb(193 197 210)
-```
-
-```card
-title: Markdown 增强
-desc: 为 VuePress2 提供更多 Markdown 增强功能
-logo: https://plugin-md-enhance.vuejs.press/logo.svg
-link: https://plugin-md-enhance.vuejs.press/zh/
-color: rgb(193 197 210)
-```
-
-```card
-title: vuepress-plugin-comment2
-desc: 评论与阅读量插件
-logo: https://plugin-comment2.vuejs.press/logo.svg
-link: https://plugin-comment2.vuejs.press/zh/
-color: rgb(193 197 210)
-```
-
-```card
-title: vuepress-plugin-components
-desc: 面向 VuePress2 的常用组件
-logo: https://plugin-components.vuejs.press/logo.svg
-link: https://plugin-components.vuejs.press/zh/
-color: rgb(193 197 210)
-```
+<VPCard
+    title="VuePress"
+    desc="Vue 驱动的静态网站生成器"
+    logo="https://v2.vuepress.vuejs.org/images/hero.png"
+    link="https://v2.vuepress.vuejs.org/zh/"
+    background="rgb(0, 197, 210, 0.15)"
+/>
 
 
-```card
-title: vuepress-theme-hope Font Matter
-desc:  Font Matter 配置直达
-logo: https://theme-hope.vuejs.press/logo.svg
-link: https://theme-hope.vuejs.press/zh/
-color: rgb(193 197 210)
-```
+
+<VPCard
+    title="vuepress-theme-hope"
+    desc="一个具有强大功能的 vuepress 主题✨"
+    logo="https://theme-hope.vuejs.press/logo.svg"
+    link="https://theme-hope.vuejs.press/zh/"
+    background="rgb(0, 197, 210, 0.15)"
+/>
+
+<VPCard
+    title="Markdown 增强"
+    desc="为 VuePress2 提供更多 Markdown 增强功能"
+    logo="https://plugin-md-enhance.vuejs.press/logo.svg"
+    link="https://plugin-md-enhance.vuejs.press/zh/"
+    background="rgb(0, 197, 210, 0.15)"
+/>
+
+<VPCard
+    title="vuepress-plugin-comment2"
+    desc="评论与阅读量插件"
+    logo="https://plugin-comment2.vuejs.press/logo.svg"
+    link="https://plugin-comment2.vuejs.press/zh/"
+    background="rgb(0, 197, 210, 0.15)"
+/>
+
+<VPCard
+    title="vuepress-plugin-components"
+    desc="面向 VuePress2 的常用组件"
+    logo="https://plugin-components.vuejs.press/logo.svg"
+    link="https://plugin-components.vuejs.press/zh/"
+    background="rgb(0, 197, 210, 0.15)"
+/>
 
 
-```card
-title: fontawesome
-desc: 开源图标库
-logo: https://fontawesome.com/images/favicon/icon.svg
-link: https://fontawesome.com/
-color: rgb(193 197 210)
-```
+<VPCard
+    title="vuepress-theme-hope Font Matter"
+    desc=" Font Matter 配置直达"
+    logo="https://theme-hope.vuejs.press/logo.svg"
+    link="https://theme-hope.vuejs.press/zh/"
+    background="rgb(0, 197, 210, 0.15)"
+/>
+
+
+<VPCard
+    title="fontawesome"
+    desc="开源图标库"
+    logo="https://fontawesome.com/images/favicon/icon.svg"
+    link="https://fontawesome.com/"
+    background="rgb(0, 197, 210, 0.15)"
+/>
