--- a/src/note-book/Kubernetes/常用优化.md
+++ b/src/note-book/Kubernetes/常用优化.md
@@ -1,7 +1,9 @@
-# 主机系统优化
+# 常用优化
+
+## 主机系统优化
 
     limit优化
-
+    
     ulimit -SHn 65535
 
 ```bash
@@ -18,10 +20,10 @@ cat <<EOF >> /etc/security/limits.conf
 
 
 
-# ipvs管理工具安装及模块加载
+## ipvs管理工具安装及模块加载
 
     为集群节点安装，负载均衡节点不用安装
-
+    
     yum -y install ipvsadm ipset sysstat conntrack libseccomp
 
 所有节点配置ipvs模块，在内核4.19+版本nf_conntrack_ipv4已经改为nf_conntrack， 4.18以下使用nf_conntrack_ipv4即可： 
@@ -59,7 +61,7 @@ cat <<EOF >> /etc/security/limits.conf
     ipip 
     EOF
 
-# 2.1.8 加载containerd相关内核模块
+## 2.1.8 加载containerd相关内核模块
 
 临时加载模块
 
@@ -77,20 +79,20 @@ cat <<EOF >> /etc/security/limits.conf
 
     systemctl enable --now systemd-modules-load.service
 
-# Linux内核升级
+## Linux内核升级
 
     在所有节点中安装,需要重新操作系统更换内核。
-
+    
     [root@localhost ~]# yum -y install perl
-
+    
     [root@localhost ~]# rpm --import https://www.elrepo.org/RPM-GPG-KEY-elrepo.org
-
+    
     [root@localhost ~]# yum -y install https://www.elrepo.org/elrepo-release-7.0-4.el7.elrepo.noarch.rpm
-
+    
     [root@localhost ~]# yum  --enablerepo="elrepo-kernel"  -y install kernel-ml.x86_64
-
+    
     [root@localhost ~]# grub2-set-default 0
-
+    
     [root@localhost ~]# grub2-mkconfig -o /boot/grub2/grub.cfg
 
 2.1.10 Linux内核优化
