--- a/src/note-book/Docker/把容器变成物理机.md
+++ b/src/note-book/Docker/把容器变成物理机.md
@@ -1,4 +1,4 @@
-# 如何把容器变成物理机
+# 把容器变成物理机
 
 本文的主题是把容器变成物理机，根据所学的知识。以及通过各种搜索引擎。他们都告诉我们，这是不可能的。这真的是不可能的吗？我不信，那我就要创造奇迹。请继续往下看。本文将教你如何把容器变成物理机。
 
@@ -6,7 +6,7 @@
 
 ## 什么是容器
 
-![img](把容器做成物理机.assets/container-what-is-container-480x416.png)
+![img](把容器变成物理机.assets/container-what-is-container-480x416.png)
 
 ​    简单来说，容器是一个隔离的操作系统沙盒，目的是[隔离所有操作系统的进程](https://medium.com/@saschagrunert/demystifying-containers-part-i-kernel-space-2c53d6979504)，那么我们也可以称容器的名称为**被隔离的进程**，在不同维度隔离级别有6个。隔离进程的名称空间是内核提供的功能，必须内核支持才可以。也就是说容器的内核跟宿主机的是同一个内核。Docker官方把它称作集装箱，我觉得这非常的形象，他们都工作在Linux 内核这条船上。
 
@@ -112,17 +112,17 @@ Docker的六个维度的隔离
 
 创建一个空的虚拟机然后增加磁盘，这里我们用50G，实测1G都用不了。
 
-![image-20230516141016096](把容器做成物理机.assets/image-20230516141016096.png)
+![image-20230516141016096](把容器变成物理机.assets/image-20230516141016096.png)
 
 开启EFI引导
 
-![image-20230516141250168](把容器做成物理机.assets/image-20230516141250168.png)
+![image-20230516141250168](把容器变成物理机.assets/image-20230516141250168.png)
 
 
 
 最终我的虚拟机配置是这样的。
 
-![image-20230516141330567](把容器做成物理机.assets/image-20230516141330567.png)
+![image-20230516141330567](把容器变成物理机.assets/image-20230516141330567.png)
 
 
 
@@ -130,15 +130,15 @@ Docker的六个维度的隔离
 
 在diskgenius里面选择打开刚刚创建的vmdk文件
 
-![image-20230516141528166](把容器做成物理机.assets/image-20230516141528166.png)
+![image-20230516141528166](把容器变成物理机.assets/image-20230516141528166.png)
 
 转换为GPT分区表
 
-![image-20230516141637658](把容器做成物理机.assets/image-20230516141637658.png)
+![image-20230516141637658](把容器变成物理机.assets/image-20230516141637658.png)
 
 分区结果展示，我这里使用了1G的esp分区，49G的根分区
 
-![image-20230516141912741](把容器做成物理机.assets/image-20230516141912741.png)
+![image-20230516141912741](把容器变成物理机.assets/image-20230516141912741.png)
 
 这样我们的磁盘准备工作就完成了。
 
@@ -148,7 +148,7 @@ Docker的六个维度的隔离
 
 #### 回到VMware，开机使用iso镜像进行引导，进入体验模式。如下图所示。
 
-![image-20230516142317754](把容器做成物理机.assets/image-20230516142317754.png)
+![image-20230516142317754](把容器变成物理机.assets/image-20230516142317754.png)
 
 
 
@@ -211,7 +211,7 @@ tmpfs           389M     0  389M    0% /run/user/0
 
 使用当前最新镜像23.10
 
-![image-20230516144907605](把容器做成物理机.assets/image-20230516144907605.png)
+![image-20230516144907605](把容器变成物理机.assets/image-20230516144907605.png)
 
 
 
@@ -222,7 +222,7 @@ root@ubuntu:/mnt# docker export $(docker create ubuntu:23.10) | tar -C . -xvf -
 
 ```
 
-![image-20230516145105467](把容器做成物理机.assets/image-20230516145105467.png)
+![image-20230516145105467](把容器变成物理机.assets/image-20230516145105467.png)
 
 
 
@@ -409,7 +409,7 @@ passwd
 
 
 
-![image-20230516212941763](把容器做成物理机.assets/image-20230516212941763.png)
+![image-20230516212941763](把容器变成物理机.assets/image-20230516212941763.png)
 
 ## 总结脚本
 
