--- a/src/note-book/Research_Develop/Python/Python全能课件/01线性数据结构.md
+++ b/src/note-book/Research_Develop/Python/Python全能课件/01线性数据结构.md
@@ -1,4 +1,4 @@
-# 线性数据结构
+# 01线性数据结构
 
 ## 内建常用数据类型
 
@@ -140,9 +140,9 @@ ls4 = list(range(5)) # 非常常用的构造方式，将一个可迭代对象转
   - 如果列表有元素，索引范围[0, 长度-1] 
 - 负索引：从右至左，从-1开始 
   - 如果列表有元素，索引范围[-长度, -1] 
-- 正、负索引不可以超界，否则引发异常IndexError 
+- 正、负索引不可以超界，否则引发异常 IndexError 
 - 为了理解方便，可以认为列表是从左至右排列的，左边是头部，右边是尾部，左边是下界，右边是上界 
-- 列表通过索引访问，list[index] ，index就是索引，使用中括号访问 
+- 列表通过索引访问，list[index] ，index 就是索引，使用中括号访问 
 
 
 
@@ -195,3 +195,76 @@ ls1[2] = 200
   - 本质上调用的是魔术方法__add__()方法 
 - \* -> list 
   - 重复操作，将本列表元素重复n次，返回新的列表
+
+```python
+ls1 = [1] * 5
+ls2 = [None] * 6
+ls3 = [1,2] * 3
+ls4 = [[1]] * 3
+```
+
+这个重复操作看似好用，如果原理掌握不好，但非常危险
+
+```python
+x = [1] * 3
+x[0] = 100
+print(x) # 结果是什么
+```
+
+```bash
+y = [[1]] * 3
+print(y) # 结果是什么
+y[0] = 100
+print(y) # 结果是什么
+y[1][0] = 200
+print(y) # 结果是什么
+```
+
+result
+
+```txt
+[[1], [1], [1]]
+[100, [1], [1]]
+[100, [200], [200]]  # ！！！！！
+```
+
+在Python中一切皆对象，而对象都是引用类型，可以理解为一个地址指针指向这个对象。 但是，字面常量字符串、数值等表现却不像引用类型，暂时可以称为简单类型。 而列表、元组、字典，包括以后学习的类和实例都可以认为是引用类型。 你可以认为简单类型直接存在列表中，而引入类型只是把引用地址存在了列表中。
+
+![image-20240513134537679](01线性数据结构.assets/image-20240513134537679.png)
+
+
+
+
+
+### 删除
+
+- remove(value) -> None 
+  - 从左至右查找第一个匹配value的值，找到就移除该元素，并返回None，否则ValueError 
+  - 就地修改 
+  - 效率？
+- pop([index]) -> item 
+  - 不指定索引index，就从列表尾部弹出一个元素 
+  - 指定索引index，就从索引处弹出一个元素，索引超界抛出IndexError错误 
+  - 效率？指定索引的的时间复杂度？不指定索引呢？
+- clear() -> None 
+  - 清除列表所有元素，剩下一个空列表
+
+### 反转
+
+- reverse() -> None 
+  - 将列表元素反转，返回None 
+  - 就地修改
+
+**这个方法最好不用，可以倒着读取，都不要反转。**
+
+### 排序
+
+- sort(key=None, reverse=False) -> None 
+  - 对列表元素进行排序，就地修改，默认升序 
+  - reverse为True，反转，降序 
+  - key一个函数，指定key如何排序，lst.sort(key=function)
+
+如果排序是必须的，那么排序。排序效率高吗？
+
+### in成员操作
+
