解决一些用tab符合代替代码类型的markdown符号错误

--- a/src/note-book/AI-Training/英伟达开源驱动和闭源驱动冲突问题.md
+++ b/src/note-book/AI-Training/英伟达开源驱动和闭源驱动冲突问题.md
@@ -39,8 +39,10 @@ vim /etc/modprobe.d/blacklist.conf
 
 在该文件最后插入以下两行内容：
 
-    blacklist nouveau
-    options nouveau modeset=0
+```bash
+blacklist nouveau
+options nouveau modeset=0
+````
 
 ### 更新验证生效
 
@@ -87,6 +89,3 @@ reboot
 进入grub界面，将这个界面的最后部分的“quiet splash —”改为“nomodeset”。F10保存，就可以进入安装界面，进行安装。
 
 #### 按照正常安装步骤进行安装
-
-
-
