--- a/src/note-book/币圈的那些事/不抄底就回家种田.md
+++ b/src/note-book/币圈的那些事/不抄底就回家种田.md
@@ -18,4 +18,4 @@
 
 ## 音视频
 
-<VidStack src="./不抄底就回家种田.mp4" />
+<VidStack src="/note-book/%E5%B8%81%E5%9C%88%E7%9A%84%E9%82%A3%E4%BA%9B%E4%BA%8B/%E4%B8%8D%E6%8A%84%E5%BA%95%E5%B0%B1%E5%9B%9E%E5%AE%B6%E7%A7%8D%E7%94%B0.mp4" />
